# rssg

./: .gitignore  Cargo.toml  README.md  atom_example.txt  mixed_example.txt  rss_example.txt
.github/workflows/: rust_check.yml  rust_clippy.yml  rust_fmt.yml
src/: atom_rss.rs  main.rs  rss_atom.rs  syndication.rs
templates/: feed_template.html
