[package]
name = "rssg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
atom_syndication = "0.11"
clap = { version = "3.1.18", features = ["derive"] }
anyhow = "1.0"
url = { version = "2", features = ["serde"] }
log = "0.4.0"
env_logger = "0.8.4"
reqwest = { version = "0.11", features = ["blocking"] }
sailfish = "0.4.0"
